--- a/style.css
+++ b/style.css
@@ -1,399 +1,57 @@
-*{
-    margin:0;
-    padding:0;
-    box-sizing: border-box;
-}
-body{
-    font-family:Georgia, 'Times New Roman', Times, serif;
+body {
+    background:linear-gradient(100deg, #4e65ff,#92effd);
+    font-family: Arial, sans-serif;
+    text-align: center;
 }
 
-
-.navbar{
-    display: flex;
-    align-items: center;
-    padding: 20px;
-}
-
-
-nav{
-    flex:1;
-    text-align: right;
-}
-
-
-nav ul{
-    display:inline-block;
-    list-style-type: none;
-}
-
-nav ul li{
-    display: inline-block;
-    margin-right: 20px;
-}
-
-nav ul li .fa-solid fa-bag-shopping{
-    display: inline-block;
-    margin-right: 20px;
-}
-
-a{
-    text-decoration: none;
-    color:#555;
-}
-
-...../*  */
-
-.container{
-    
-    max-width: 1300px;
-    margin:auto;
-    padding-left: 25px;
-    padding-right: 25px;
-}
-
-.row{
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    justify-content: space-around;
-}
-
-.col-2{
-    flex-basis: 50%;
-    min-width: 300px;
-}
-
-
-.col-2 h1{
-    font-size: 50px;
-    line-height: 60px;
-    margin: 25px 0;
-    color:#fff
-}
-
-.col-2 h1:hover{
-
-    background: linear-gradient(to right, #f32170,#ff6b08,#cf23cf,#eedd44);
-    -webkit-text-fill-color: transparent;
+h1{
+    padding-top: 25px;
+    font-size: 60px;
+    background: -webkit-linear-gradient(#c33764,#1d2671);
     -webkit-background-clip: text;
+    -webkit-text-fill-color:transparent;
+
+}
+
+.user-form {
+    margin: 20px;
+}
+
+.user-form input {
+    padding: 5px;
+    margin-right: 10px;
+}
+
+.user-list {
+    margin-top: 30px;
+}
+
+.user-list ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+.user-list li {
+    margin: 5px;
 }
 
 .btn{
-    display: inline-block;
-    background: #ff523b;
-    color:#fff;
-    padding: 8px 30px;
-    margin: 30px 0;
-    border-radius:30px;
-    transition: background 0.5s;
+display: inline-block;
+background: #ff523b;
+color:#fff;
+padding: 8px 30px;
+margin: 30px 0;
+border: none;
+border-radius:30px;
+transition: background 0.5s;
 }
 
 .btn:hover{
-    background: #563434;
-}
-.header{
-    background:no-repeat;
-    background-size: cover;
-    background:linear-gradient(rgba(243, 237, 237, 0.7),rgba(117, 142, 148, 0.315)),url("https://images.unsplash.com/photo-1574634534894-89d7576c8259?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fHNob3BwaW5nfGVufDB8fDB8fHww&auto=format&fit=crop&w=500&q=60");
+background: #563434;
 }
 
-.header .row{
-    margin-top: 70px;
+@media only screen and (max-width: 600px){
+    body{
+        background:lightgreen;
+    }
 }
-
-.categories{
-    margin: 70px 0;
-}
-
-.col-3{
-    flex-basis: 30% ;    
-    min-width: 250px;
-    margin-bottom: 30px;
-}
-
-.col-3 img{
-    width:100%;
-}
-
-.small-container{
-    max-width: 1080px;
-    margin: auto;
-    padding-left: 25px;
-    padding-right: 25px;
-}
-
-.col-4{
-    flex-basis: 25%;
-    padding: 10px;
-    min-width: 200px;
-    margin-bottom: 50px;
-    transition: transform 0.5s;
-}
-
-.col-4 img{
-    width:100%;
-}
-
-.title{
-    text-align: center;
-    margin: 0 auto 80px;
-    position: relative;
-    line-height: 60px;
-    color:#555;
-}
-
-.title::after{
-    content: '';
-    background: #ff523b;
-    width: 80px;
-    height: 5px;
-    border-radius: 5px;
-    position: absolute;
-    bottom: 0;
-    left:50%;
-    transform: translateX(-50%);
-    
-}
-
-h4{
-   color:#555;
-   font-weight: normal; 
-}
-
-.col-4 p{
-    font-size: 14px;
-}
-
-.rating .fa{
-    color:#ff523b;
-}
-
-.col-4:hover{
-    transform: translateY(-5px);
-}
-/*----------------------offer-------------------------*/
-
-.offer{
-    padding: 30px 0;
-    margin-top: 80px;
-    background:linear-gradient(rgba(243, 237, 237, 0.7),rgba(192, 219, 226, 0.315));
- 
-}
-
-.col-2 .offer-img{
-    padding: 50px;
-}
-
-small{
-    color:#555;
-}
-
-/*---------------------testimonial---------------------*/
-
-.testimonial{
-    padding-top: 100px;
-
-}
-
-.testimonial .col-3{
-    text-align: center;
-    padding: 40px 20px;
-    box-shadow: 0 0 20px 0px rgba(0,0,0,0.1);
-    cursor:pointer;
-    transition: transform 0.5s;
-}
-
-.testimonial .col-3 img{
-    width: 50px;
-    margin-top: 20px;
-    border-radius: 50%;
-}
-
-.testimonial .col-3:hover{
-    transform: translateY(-10px);
-}
-
-.fa.fa-quote-left{
-    font-size:34px;
-    color:#ff523b;
-}
-
-.col-3 p{
-    font-size:12px;
-    margin:12px 0;
-    color:#777;
-}
-
-.testimonial .col-3 h3{
-    font-weight: 600;
-    color:#555;
-    font-size: 16px;
-}
-
-.brands{
-    margin: 100px auto;
-}
-
-.col-5{
-     width: 160px;
-}
-
-.col-5 img{
-    width: 100%;
-    cursor: pointer;
-    filter:grayscale(100%);
-}
-
-.col-5 img:hover{
-    filter:grayscale(0);
-}
-
-/*-------------------footer ------------------*/
-
-.footer{
-    background: #000;
-    color:#8a8a8a;
-    font-size: 60px 0 20px;
-    padding:60px 0 20px;
-}
-
-.footer p{
-    color:#8a8a8a;
-}
-
-.footer h3{
-    color:#fff;
-    margin-bottom: 20px;
-}
-
-.footer-col-1, .footer-col-2, .footer-col-3, .footer-col-4{
-    min-width: 250px;
-    margin-bottom: 20px;
-}
-
-.footer-col-1{
-    flex-basis: 30%;
-}
-
-.footer-col-2{
-    flex:1;
-    text-align: center;
-}
-
-.footer-col-2 img{
-    width:180px;
-    margin-bottom: 20px;
-}
-
-.footer-col-3,.footer-col-4{
-    flex-basis: 12%;
-    text-align: center;
-}
-
-ul{
-    list-style-type: none;
-}
-.app-logo{
-    margin-top:20px;
-}
-
-.app-logo img{
-    width:140px;
-}
-
-.footer hr{
-    border:none;
-    background: #b5b5b5;
-    height: 1px;
-    margin:20px 0;
-}
-
-.copyright{
-    text-align: center;
-}
-
-.menu-icon{
-    width: 28px;
-    margin-left:28px;
-}
-
-/*-------------------media query for menu-----------*/
-
-@
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
